# OpenDLO

./: CMakeLists.txt  LICENSE  README.md
src/: CoinDLOSolver.cpp  CoinDLOSolver.h  Constants.h  DLOSolver.cpp  DLOSolver.h  Domain.cpp  Domain.h  Edge.cpp  Edge.h  Enums.h  Line2D.cpp  Line2D.h  MosekDLOSolver.cpp  MosekDLOSolver.h  Node.h  OpenDLOTest.cpp  Point2D.cpp  Point2D.h  Poly2D.cpp  Poly2D.h  Vector2d.h  triangle.cpp  triangle.h
